2020-01-27  Albrecht Dreß  <albrecht.dress@arcor.de>

	Unify wrapped label creation

	* libbalsa/misc.[ch]: add new helper libbalsa_create_wrap_label()
	  for creating a label with word wrap and with or without markup;
	  libbalsa_create_grid_label(): add missing xalign
	* libbalsa/html.c, libbalsa/libbalsa-gpgme-cb.c,
	  libbalsa/libbalsa-gpgme-widgets.c,
	  src/balsa-mime-widget-message.c, src/balsa-mime-widget-text.c,
	  src/balsa-mime-widget-vcalendar.c, src/folder-conf.c,
	  src/sendmsg-window.c: use libbalsa_create_wrap_label()
	* src/pref-manager.c: use libbalsa_create_wrap_label(); remove
	  redundant calls to set default value
	* src/print-gtk.c: add_font_button(), add_margin_spinbtn(): add
	  missing xalign, remove default justify; add_margin_spinbtn():
	  do not wrap the (short) units string; create_options_group():
	  use libbalsa_create_wrap_label()

2020-01-27  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mailbox-local: Drop a redundant auxiliary structure

	* libbalsa/mailbox_local.c (lbml_set_threading_idle_cb),
	(libbalsa_mailbox_local_set_threading): Drop
	LbmlSetThreadingInfo, it's redundant; just pass the mailbox.

2020-01-27  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mailbox-local: Lock the mailbox in idle callbacks

	* libbalsa/mailbox_local.c (libbalsa_mailbox_local_finalize): no
	need to clear pointers and hendler ids in a finalize() method;
	(lbml_set_threading_idle_cb): lock and unlock the mailbox; no
	need to unref the mailbox; clear the handler id;
	(libbalsa_mailbox_local_set_threading): store the handler id,
	and do not ref the mailbox.

2020-01-27  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mailbox: Lock the mailbox in idle callbacks

	* libbalsa/mailbox.c (lbm_msgno_filt_check_idle_cb),
	(lbm_set_threading_idle_cb):

2020-01-26  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mailbox: Always use the idle callback to sort after changing the
	threading; save the handler id, to remove the source at finalize